<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/no_internet"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.rey.material.widget.Button
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/text_field_padding"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowRadius="15"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:visibility="visible" />

        <com.rey.material.widget.Button
            android:id="@+id/connect"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/text_field_padding"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowRadius="15"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>