<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/seekbar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:padding="@dimen/medium_padding"
            android:text="@string/distance"
            android:textColor="@color/black" />

        <com.rey.material.widget.CheckBox
            android:id="@+id/distance_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/seekbar_label"
            android:layout_toEndOf="@+id/seekbar_label" />


        <SeekBar
            android:id="@+id/distance_seekbar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/distance_value"
            android:layout_toRightOf="@+id/distance_flag"
            android:layout_toStartOf="@+id/distance_value"
            android:max="10"
            android:maxHeight="50dp"
            android:minHeight="50dp" />

        <TextView
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:padding="@dimen/medium_padding"
            android:text="@string/show"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/filter_seekbar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/mode_label" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/reset"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/filter"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>