<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/textview_margin"
        android:paddingRight="@dimen/textview_margin">

        <LinearLayout
            android:id="@+id/show_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            android:padding="@dimen/textview_margin">

            <ImageView
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:padding="15dp"
                android:src="@drawable/white_road"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textview_margin"
                android:text="@string/show_route"
                android:textSize="16sp"
                android:textColor="@color/white" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/focus_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/textview_margin">

            <ImageView
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:padding="15dp"
                android:src="@drawable/white_focus" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textview_margin"
                android:text="@string/focus_vehicle"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/show_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/textview_margin">

            <ImageView
                android:id="@+id/add_fav_icon"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:padding="15dp"
                android:src="@drawable/schedule_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textview_margin"
                android:text="@string/show_schedules"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/add_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/textview_margin">

            <ImageView
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:padding="15dp"
                android:src="@drawable/white_star" />

            <TextView
                android:id="@+id/fav_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textview_margin"
                android:text="@string/add_favourite"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/share_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/textview_margin">

            <ImageView
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:padding="15dp"
                android:src="@drawable/share" />

            <TextView
                android:id="@+id/share_vehicle_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textview_margin"
                android:text="@string/share_vehicle"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />
    </LinearLayout>

</RelativeLayout>